Sonarcloud fixes